# installable_python_project

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/installable_python_project/: __main__.py
src/installable_python_project/assets/: config.ini
src/installable_python_project/core/: _configuration.py  _initial_configuration.py  _resources.py  logger.py  paths.py
tests/: test_main.py
tests/core/: test_configuration.py  test_initial_configuration.py  test_logger.py  test_paths.py  test_resources.py
