[project]
name = "installable_python_project"
version = "0.1.1"
description = "Installable Python project template"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
dependencies = ["loguru>=0.7.3", "platformdirs>=4.3.8", "retry>=0.9.2"]
requires-python = ">=3.13"
readme = "README.md"
license = "LICENSE"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
dev = ["pytest>=8.3.5", "types-retry>=0.9.9.20250322"]
